fix: inputVisible in header

--- a/src/countries.scss
+++ b/src/countries.scss
@@ -1,8 +1,10 @@
 @import "~react-image-gallery/styles/scss/image-gallery.scss";
-
-// body{
-// 	background-image: url();
-// }
+*{
+	overflow-x: hidden;
+}
+body{
+	background-image: url('./assets/img/back-full.jpg');
+}
 .countries {
 	display: flex;
 	flex-direction: column;
@@ -11,7 +13,7 @@
 		height: 350px;
 	}
 	.country-img {
-		width: 1900px;
+		width: 100%;
 		max-height: 750px;
 		filter: drop-shadow(10px 10px 10px #666B7B);
 	}
